--- a/index.html
+++ b/index.html
@@ -143,13 +143,11 @@
             <input type="text" placeholder="Enter your region" required />
             <input type="number" placeholder="Enter postal code" required />
           </div>
-        </div>
-        <div class="column">
         <div class="input-box button">
           <input type="Submit" value="Submit">
         </div>
-      </form>
-    </section>
+        </div>
+      <form></section>
   </body>
 </html>
 
